--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "body-parser": "^1.15.2",
     "cors": "^2.8.1",
     "express": "^4.14.0",
-    "mongoose": "^4.6.2"
+    "lodash": "^4.16.4",
+    "mongoose": "^4.6.2",
+    "node-fetch": "^1.6.3"
   }
 }
