--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "cors": "^2.8.1",
+    "ejs": "^2.5.2",
     "express": "^4.14.0",
     "lodash": "^4.16.4",
     "mongoose": "^4.6.2",
